<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ColorMyViews">

    <TextView
        android:id="@+id/txt_one_box"
        style="@style/WhitBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/toppadding"
        android:layout_marginTop="@dimen/paddingbot"
        android:layout_marginEnd="@dimen/paddingbot"
        android:text="@string/box_one"
        app:layout_constraintDimensionRatio=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_tow"
        style="@style/WhitBox"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/box_Tow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_one_box" />

    <TextView
        android:id="@+id/txt_three"
        style="@style/WhitBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/box_three"
        app:layout_constraintBottom_toTopOf="@+id/txt_foure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_tow"
        app:layout_constraintTop_toTopOf="@+id/bt_tow" />

    <TextView
        android:id="@+id/txt_foure"
        style="@style/WhitBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/box_four"
        app:layout_constraintBottom_toTopOf="@+id/txt_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_tow"
        app:layout_constraintTop_toBottomOf="@+id/txt_three" />

    <TextView
        android:id="@+id/txt_five"
        style="@style/WhitBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/box_five"
        app:layout_constraintBottom_toBottomOf="@+id/bt_tow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_tow"
        app:layout_constraintTop_toBottomOf="@+id/txt_foure" />

    <TextView
        android:id="@+id/lb_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto"
        android:text="@string/how_to_playe"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_foot"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_foot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tap_screen_and_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/lb_text"
        app:layout_constraintTop_toBottomOf="@+id/bt_tow"
        app:layout_constraintVertical_bias="0.044" />

    <Button
        android:id="@+id/bt_red"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_red"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_yellow"
        app:layout_constraintEnd_toStartOf="@+id/bt_yellow"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/button_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_green"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_red"
        app:layout_constraintTop_toBottomOf="@+id/txt_foot"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/bt_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_green"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bt_yellow" />
</androidx.constraintlayout.widget.ConstraintLayout>