<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/txt_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"
    />
    <ImageView
        android:id="@+id/img_dic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/empty_dice"
        tools:src="@drawable/dice_1"

        android:layout_gravity="center_horizontal"

        ></ImageView>

    <Button
        android:id="@+id/bt_rool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll"></Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_next"
        android:text="@string/next"
        android:layout_gravity="center_horizontal"
        >

    </Button>

    <Button
        android:id="@+id/bt_constract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/constratelayout"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>
</layout>