<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="myName"
            type="com.example.myapplication.Myname" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/txt_name"
        style="@style/text_view_titr"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:text="@={myName.name}"
        android:textAlignment="center"
        tools:ignore="Suspicious0dp" />

    <EditText
        android:id="@+id/ed_nikname"
        style="@style/text_view_titr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/what_is_your_nikname"
        android:inputType="textPersonName"

        android:textAlignment="center"
        android:autofillHints=""
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/bt_done"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColorHint="@color/colorAccent"
        android:background="@color/colorAccent"
        android:text="@string/done" />

    <TextView
        android:id="@+id/textView2"
        style="@style/text_view_titr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal" />

    <ImageView
        android:id="@+id/img_star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:contentDescription="@string/star_for_favarit"
        android:paddingBottom="@dimen/paddingbot"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ScrollView
        android:id="@+id/scrl_bio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/padding_start"
        android:paddingTop="@dimen/toppadding"
        android:paddingEnd="@dimen/bottompadding">

        <TextView
            android:id="@+id/txt_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/bio_resource" />
    </ScrollView>
</LinearLayout>
</layout>